--- a/news-and-events.html
+++ b/news-and-events.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-   <!-- Title -->
-  <title>Lithium Battery Production Line Solutions - Indygreen Technologies</title>
+  <!-- Title -->
+ <title>Careers at Indygreen Technologies - Join Our Renewable Energy Team</title>
 
   <!-- Meta Description -->
-  <meta name="description" content="Indygreen Technologies offers turnkey lithium cell and battery pack production lines for EVs and energy storage. Build advanced, cost-effective, and sustainable lithium battery manufacturing plants with global expertise." />
+  <meta name="description" content="Explore career opportunities at Indygreen Technologies. We are hiring passionate professionals in solar, lithium battery, EV mobility, and hydrogen solutions. Join us and build a sustainable future." />
 
   <!-- Meta Keywords -->
-  <meta name="keywords" content="Lithium battery production line, lithium cell manufacturing, battery pack assembly line, EV battery production India, energy storage battery solutions, turnkey lithium battery factory, GWh battery manufacturing solutions, ESS battery production" />
+  <meta name="keywords" content="Indygreen Technologies careers, renewable energy jobs, solar jobs India, lithium battery jobs, EV mobility careers, hydrogen energy jobs, green technology jobs, clean energy careers, engineering jobs renewable energy, Indygreentech hiring" />
 
   <!-- Robots -->
   <meta name="robots" content="index, follow" />
@@ -18,19 +18,19 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Lithium Battery Production Line Solutions - Indygreen Technologies" />
-  <meta property="og:description" content="Turnkey lithium cell & battery pack production line solutions for EVs and energy storage. Delivering GWh-scale lithium battery plants with automation and precision." />
-  <meta property="og:url" content="https://www.indygreentech.com/lithium-batteries.html" />
+  <meta property="og:title" content="Careers at Indygreen Technologies - Renewable Energy Jobs" />
+  <meta property="og:description" content="Join Indygreen Technologies and work on solar, battery, EV, and hydrogen projects. Explore exciting career opportunities today." />
+  <meta property="og:url" content="https://www.indygreentech.com/career.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Indygreen Technologies" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Lithium Battery Production Line Solutions - Indygreen Technologies" />
-  <meta name="twitter:description" content="Indygreen Technologies delivers turnkey lithium battery and cell production lines for EV mobility and energy storage projects worldwide." />
+  <meta name="twitter:title" content="Careers at Indygreen Technologies - Renewable Energy Jobs" />
+  <meta name="twitter:description" content="We are hiring! Explore renewable energy job openings in solar, lithium batteries, EV mobility & hydrogen at Indygreen Technologies." />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/lithium-batteries.html" />
+  <link rel="canonical" href="https://www.indygreentech.com/career.html" />
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -261,120 +261,34 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row" style="background: url(img/batteries-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<!-- ttm-page-title-row -->
+<section class="ttm-page-title-row" style="background: url(img/abt-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">LITHIUM BATTERIES Lines</h1>
+<h1 class="title text-white">News & Events</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Lithium Batteries Lines</span>
+<span class="text-white">News & Events</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
 </div><!-- /.row -->  
 </div><!-- /.container -->                      
 </section>
-<!-- About Us -->
- 
-<div class="container py-5">
-  <div class="row g-4">
-    <!-- Card 1 -->
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries in India"><img src="img/for-cylindrical-batteries.png" class="card-img-top product-img" alt="For Cylindrical Batteries in India" title="For Cylindrical Batteries in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">For Cylindrical Batteries</h5>
-            <p class="card-text text-muted">High-performance cylindrical batteries for energy storage solutions.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <!-- Card 2 -->
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="for-prismatic-batteries.html" title="For Prismatic Batteries in India"><img src="img/for-prismatic-batteries.png" class="card-img-top product-img" alt="For Prismatic Batteries in India" title="For Prismatic Batteries in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">For Prismatic Batteries</h5>
-            <p class="card-text text-muted">Reliable prismatic batteries for EV and industrial applications.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Battery Pack Tester in India"><img src="img/battery-pack-tester.png" class="card-img-top product-img" alt="Battery Pack Testers in India" title="Battery Pack Testers in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Battery Pack Testers</h5>
-            <p class="card-text text-muted">Turnkey battery pack testers for optimized battery performance.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Card 3 
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="BMS Testers"><img src="img/bms-tester.png" title="BMS Testers in India" class="card-img-top product-img" alt="BMS Testers in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">BMS Testers</h5>
-            <p class="card-text text-muted">High-precision BMS testers for battery performance testing.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>-->
-  </div>
-</div>
 
-<div class="container py-5">
-  <div class="row g-4">
-    <!-- Card 1 -->
-
-    <!-- Card 2 -->
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Other Machines"><img src="img/other-machines.png" class="card-img-top product-img" alt="Other Machines in India" title="Other Machines in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Other Machines</h5>
-            <p class="card-text text-muted">Innovative machines for energy and technology solutions.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
+<div class="container ">
+    <div class="head pt-3">
+        <h1 class="text-center"><u>News & Events</u></h1> <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, suscipit omnis iusto numquam tenetur libero perspiciatis voluptatum facere aliquid, debitis excepturi eligendi qui explicabo possimus? Voluptatibus incidunt dolorum dolor ut! Soluta ipsam enim nam corporis veritatis, consectetur, tenetur hic possimus incidunt esse, illum nobis explicabo laudantium aperiam laboriosam pariatur iure praesentium cumque inventore tempore vitae! Rem reiciendis ipsum fugiat dicta doloremque ipsam nemo quibusdam facilis corrupti illum! Voluptas harum ullam laudantium reprehenderit optio, molestias deleniti cum eum quia reiciendis molestiae doloribus eaque fuga quod nisi voluptate nostrum odit a assumenda, expedita iste in consequatur repudiandae magnam. Nam, minus repellat vitae quo fugit quasi nemo laboriosam porro tempora neque sint soluta iure reprehenderit molestias possimus culpa dignissimos veniam necessitatibus doloribus consectetur harum. Cumque accusantium necessitatibus, neque enim molestias nihil reprehenderit perferendis vero dolorem quibusdam ea at maxime ullam quisquam unde esse ratione inventore. Alias, excepturi molestias sequi dolorum odio magnam dignissimos, totam, doloribus modi saepe veniam tempora? Doloremque minima alias qui repellendus placeat eius aut voluptatum sint? Accusantium quam nobis expedita dolorum! Veritatis quibusdam, iusto rerum ipsum est itaque commodi, voluptatibus quam obcaecati hic assumenda! Veritatis iure pariatur ut nemo necessitatibus doloribus architecto recusandae sint facilis ea velit ex laboriosam sit autem inventore impedit similique odio quae laudantium sunt laborum explicabo, deserunt consequuntur ad? Quaerat rem est fugiat ab illum harum nesciunt sequi temporibus explicabo saepe, quam impedit nostrum veniam laboriosam assumenda earum! Explicabo illum laborum aperiam sunt sapiente fugiat nobis. Aperiam ipsa sed mollitia velit nemo vitae hic, placeat quis deleniti minima beatae officiis illum. Distinctio veniam odit unde voluptas autem nam nihil quisquam hic! Nulla, distinctio? Itaque vitae veritatis, error repellat quos iure laborum ab ullam optio dicta, perferendis voluptatibus facilis nesciunt ipsam provident dolores ipsa ducimus nulla reprehenderit, dignissimos minus nam recusandae. Doloremque minus accusantium deleniti magnam consequuntur.</p>
     </div>
-
-    <!-- Card 3 -->
-  </div>
 </div>
   <!-- Footer -->
 <footer class="py-4">
@@ -403,7 +317,7 @@
     <h6><span class="font-italic font-weight-bold">Category Links</span></h6>
   <ul class="mt-2 d-block">
   <li class="border-bottom"><a href="solar-pv.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries</a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
 
 
 
