--- a/abt.html
+++ b/abt.html
@@ -198,6 +198,7 @@
 </li>
 
 <li><a href="career.html" title="Career">Career</a></li>
+<li><a href="news-and-events.html" title="News & Events">News & Events</a></li>
 <li><a href="contact-us.html" title="Contact Us">Contact Us</a></li>
 </ul>
 <!-- source for mobile menu end -->
@@ -299,7 +300,7 @@
   <li class="border-bottom"><a href="index.html" title="Home"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
   <li class="border-bottom"><a href="about-us.html" title="About Us"><i class="fa fa-angle-right" aria-hidden="true"></i> About Us</a></li>
   <li class="border-bottom"><a href="career.html" title="Career"><i class="fa fa-angle-right" aria-hidden="true"></i> Career  </a></li>
-  <li class="border-bottom"><a href="#" title="News & Events"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
+  <li class="border-bottom"><a href="news-and-events.html" title="News & Events"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
   <!-- <li class="border-bottom"><a href="sitemap.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Sitemap  </a></li> -->
   <!-- <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Our Presence  </a></li> -->
   <li class="border-bottom"><a href="contact-us.html" title="Contact Us"><i class="fa fa-angle-right" aria-hidden="true"></i> Contact Us  </a></li>
@@ -337,7 +338,7 @@
   <li class="border-bottom"><a href="lithium-battery-raw-material-components.html" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Raw Material Components</a></li>
 
   <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Panels</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
   
   </ul>
   </div>
