--- a/contact-us.html
+++ b/contact-us.html
@@ -159,6 +159,7 @@
 </li>-->
 
 <li class="nav-item mr-0"><a href="career.html" title="Career" class="nav-link">Career  </a></li>
+<li class="nav-item mr-0"><a href="news-and-events.html" title="News & Events" class="nav-link">News & Events  </a></li>
 <li class="nav-item mr-0"><a href="contact-us.html" title="Contact Us" class="nav-link">Contact Us</a></li>
 </ul>                            
 </div>
@@ -241,6 +242,7 @@
 </li>
 
 <li><a href="career.html" title="Career">Career</a></li>
+<li><a href="news-and-events.html" title="News & Events">News & Events</a></li>
 <li><a href="contact-us.html" title="Contact Us">Contact Us</a></li>
 </ul>
 <!-- source for mobile menu end -->
@@ -450,7 +452,7 @@
   <li class="border-bottom"><a href="index.html" title="Home"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
   <li class="border-bottom"><a href="about-us.html" title="About Us"><i class="fa fa-angle-right" aria-hidden="true"></i> About Us</a></li>
   <li class="border-bottom"><a href="career.html" title="Career"><i class="fa fa-angle-right" aria-hidden="true"></i> Career  </a></li>
-  <li class="border-bottom"><a href="#" title="News & Events"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
+  <li class="border-bottom"><a href="news-and-events.html" title="News & Events"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
   <!-- <li class="border-bottom"><a href="sitemap.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Sitemap  </a></li> -->
   <!-- <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Our Presence  </a></li> -->
   <li class="border-bottom"><a href="contact-us.html" title="Contact Us"><i class="fa fa-angle-right" aria-hidden="true"></i> Contact Us  </a></li>
