--- a/index.html
+++ b/index.html
@@ -2444,11 +2444,9 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <span>Business Partners:</span>
 
 <ul>
-<li class="text-uppercase"><i class="fa fa-check" aria-hidden="true"></i> Wah Logistics, MD, US</li>
-<li class="text-uppercase"><i class="fa fa-check" aria-hidden="true"></i> Taal Innovation, BC, Canada</li>
-<li class="text-uppercase"><i class="fa fa-check" aria-hidden="true"></i> Tekni Solar Srl, Italy</li>
 <li class="text-uppercase"><i class="fa fa-check" aria-hidden="true"></i> Xx Tech,Shenzhen China</li>
 <li class="text-uppercase"><i class="fa fa-check" aria-hidden="true"></i> Sunshine Solar, Wuxi, China</li>
+<li class="text-uppercase"><i class="fa fa-check" aria-hidden="true"></i> Wah Logistics, MD, US</li>
 
 </ul>
 </div>
@@ -2497,7 +2495,8 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
     <h6><span class="font-italic font-weight-bold">Category Links</span></h6>
   <ul class="mt-2 d-block">
   <li class="border-bottom"><a href="solar-pv.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries</a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Cell Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Lines</a></li>
 
 
 
