--- a/about-us.html
+++ b/about-us.html
@@ -454,7 +454,8 @@ Balancing her professional and personal life with ease, Harleen is also a mother
     <h6><span class="font-italic font-weight-bold">Category Links</span></h6>
   <ul class="mt-2 d-block">
   <li class="border-bottom"><a href="solar-pv.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries</a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Cell Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Lines</a></li>
 
 
 
