--- a/raw-materials.html
+++ b/raw-materials.html
@@ -107,7 +107,7 @@
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
 <li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
-<li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Turnkey Line</a>
+<li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Line</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Turnkey Automation" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Automation</a></li>
 <li class="nav-item mr-0"><a href="#" title="Stringer" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Stringer</a></li>
@@ -116,8 +116,8 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Line</a></li>
+<li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Aluminum Frames" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Aluminum Frames</a></li>
@@ -207,7 +207,7 @@
 <li><a href="solar-pv.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line">Solar Panel Production Turnkey Line</a>
+<a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line">Solar Panel Production Line</a>
 <ul>
 <li><a href="#" title="Turnkey Automation">Turnkey Automation</a></li>
 <li><a href="#" title="Stringer">Stringer</a></li>
@@ -216,11 +216,11 @@
 </ul>
 </li>
 <!-- Two -->
-<li>
-<a href="#" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
+ <li>
+<a href="#" title="Solar Cell Production Line">Solar Cell Production Line</a>
 </li>
 <li>
-<a href="#" title="Solar Cell Production Line">Solar Cell Production Line</a>
+<a href="#" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
 </li>
 <li>
 <a href="raw-materials.html" title="Raw Materials">Raw Materials</a>
@@ -317,10 +317,10 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Aluminum Frames in India"><img src="img/aluminum-frames.png" class="card-img-top product-img" alt="Aluminum Frames in India" title="Aluminum Frames in India"></a>
+        <a href="#" title="Aluminum Frames in India"><img src="img/solar-cells.png" class="card-img-top product-img" alt="Aluminum Frames in India" title="Aluminum Frames in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title"> Aluminum Frames</h5>
+            <h5 class="card-title"> Solar Cells</h5>
             <p class="card-text text-muted">Durable aluminum frames for solar panel assembly.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
@@ -334,10 +334,10 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Solar Cells in India"><img src="img/solar-cells.png" class="card-img-top product-img" alt="Solar Cells in India" title="Solar Cells in India"></a>
+        <a href="#" title="Solar Plant in India"><img src="img/solar-plant.png" class="card-img-top product-img" alt="Solar Plant in India" title="Solar Plant in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Solar Cells</h5>
+            <h5 class="card-title">Solar Plant</h5>
             <p class="card-text text-muted">High-efficiency solar cells for sustainable energy solutions.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
@@ -349,9 +349,77 @@
     </div>
 
     <!-- Card 3 -->
+      <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Solar Aluminum Frame in India"><img src="img/aluminum-frames.png" class="card-img-top product-img" alt="Solar Aluminum Frame in India" title="Solar Aluminum Frame in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Solar Aluminum Frame</h5>
+            <p class="card-text text-muted">High-efficiency solar cells for sustainable energy solutions.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+<div class="container py-5">
+  <div class="row g-4">
+    <!-- Card 1 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Solar Junction Box in India"><img src="img/solar-junction-box.png" class="card-img-top product-img" alt="Solar Junction Box in India" title="Solar Junction Box in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title"> Solar Junction Box</h5>
+            <p class="card-text text-muted">Durable aluminum frames for solar panel assembly.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <!-- Card 2 -->
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Solar Sealant and Bonding in India"><img src="img/solar-sealent-and-bonding.png" class="card-img-top product-img" alt="Solar Sealant and Bonding in India" title="Solar Sealant and Bonding in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Solar Sealant and Bonding</h5>
+            <p class="card-text text-muted">High-efficiency solar cells for sustainable energy solutions.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 3 -->
+      <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Solar wire and plugs in India"><img src="img/solar-wire-and-plugs.png" class="card-img-top product-img" alt="Solar wire and plugs in India" title="Solar wire and plugs in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Solar wire and plugs</h5>
+            <p class="card-text text-muted">High-efficiency solar cells for sustainable energy solutions.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
