--- a/solar-panel-production-turnkey-line.html
+++ b/solar-panel-production-turnkey-line.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Solar Panel Production Turnkey Line Solutions - Indygreen Technologies</title>
+  <title>Solar Panel Production Line Solutions - Indygreen Technologies</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Indygreen Technologies provides complete turnkey solar panel production line solutions. From design to installation, we deliver automated solar PV module manufacturing plants with global expertise." />
@@ -17,7 +17,7 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Solar Panel Production Turnkey Line Solutions - Indygreen Technologies" />
+  <meta property="og:title" content="Solar Panel Production Line Solutions - Indygreen Technologies" />
   <meta property="og:description" content="Complete turnkey solar panel production line solutions including design, setup, and automation of solar PV manufacturing plants." />
   <meta property="og:url" content="https://www.indygreentech.com/solar-panel-production-turnkey-line.html" />
   <meta property="og:type" content="website" />
@@ -25,7 +25,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Solar Panel Production Turnkey Line Solutions - Indygreen Technologies" />
+  <meta name="twitter:title" content="Solar Panel Production Line Solutions - Indygreen Technologies" />
   <meta name="twitter:description" content="Indygreen Technologies delivers turnkey solar PV module manufacturing line solutions with automation and high efficiency." />
 
   <!-- Canonical -->
@@ -106,7 +106,7 @@
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
 <li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
-<li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Turnkey Line</a>
+<li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Line</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Turnkey Automation" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Automation</a></li>
 <li class="nav-item mr-0"><a href="#" title="Stringer" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Stringer</a></li>
@@ -115,8 +115,8 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Line</a></li>
+<li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Aluminum Frames" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Aluminum Frames</a></li>
@@ -206,7 +206,7 @@
 <li><a href="solar-pv.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line">Solar Panel Production Turnkey Line</a>
+<a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line">Solar Panel Production Line</a>
 <ul>
 <li><a href="#" title="Turnkey Automation">Turnkey Automation</a></li>
 <li><a href="#" title="Stringer">Stringer</a></li>
@@ -215,11 +215,11 @@
 </ul>
 </li>
 <!-- Two -->
-<li>
-<a href="#" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
+ <li>
+<a href="#" title="Solar Cell Production Line">Solar Cell Production Line</a>
 </li>
 <li>
-<a href="#" title="Solar Cell Production Line">Solar Cell Production Line</a>
+<a href="#" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
 </li>
 <li>
 <a href="raw-materials.html" title="Raw Materials">Raw Materials</a>
@@ -302,7 +302,7 @@
 <a title="Homepage" href="solar-pv.html" title="Solar PV" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Solar Panel Production Turnkey Line</span>
+<span class="text-white">Solar Panel Production Line</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -316,10 +316,10 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Turnkey Automation in India"><img src="img/turnkey-automation.png" class="card-img-top product-img" alt="Turnkey Automation in India" title="Turnkey Automation in India"></a>
+        <a href="#" title="Semi Auto Line in India"><img src="img/turnkey-automation.png" class="card-img-top product-img" alt="Semi Auto Line in India" title="Semi Auto Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Turnkey Automation</h5>
+            <h5 class="card-title">Semi Auto Line</h5>
             <p class="card-text text-muted">Complete turnkey automation solutions for efficient industrial processes.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
@@ -333,10 +333,10 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Stringer in India"><img src="img/stinger.png" class="card-img-top product-img" alt="Stringer in India" title="Stringer in India"></a>
+        <a href="#" title="Fully Auto Line in India"><img src="img/stinger.png" class="card-img-top product-img" alt="Fully Auto Line in India" title="Fully Auto Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Stringer</h5>
+            <h5 class="card-title">Fully Auto Line</h5>
             <p class="card-text text-muted">Advanced stringer equipment for automated PV manufacturing.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
@@ -350,10 +350,10 @@
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Laminator in India"><img src="img/laminator.png" class="card-img-top product-img" alt="Laminator in India" title="Laminator in India"></a>
+        <a href="#" title="Tarbor and Stringer in India"><img src="img/laminator.png" class="card-img-top product-img" alt="Tarbor and Stringer in India" title="Tarbor and Stringer in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Laminator</h5>
+            <h5 class="card-title">Tarbor and Stringer</h5>
             <p class="card-text text-muted">Optimized laminators for durable and high-quality solar panels.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
@@ -369,6 +369,21 @@
 <div class="container py-5">
   <div class="row g-4">
     <!-- Card 1 -->
+     <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Laminator in India"><img src="img/laminator.png" class="card-img-top product-img" alt="Laminator in India" title="Laminator in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Laminator</h5>
+            <p class="card-text text-muted">Optimized laminators for durable and high-quality solar panels.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
         <a href="#" title="Sun Simulator in India"><img src="img/sun-simulator.png" class="card-img-top product-img" alt="Sun Simulator in India" title="Sun Simulator in India"></a>
