--- a/solar-pv.html
+++ b/solar-pv.html
@@ -106,7 +106,7 @@
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
 <li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
-<li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Turnkey Line</a>
+<li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Line</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Turnkey Automation" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Automation</a></li>
 <li class="nav-item mr-0"><a href="#" title="Stringer" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Stringer</a></li>
@@ -114,9 +114,8 @@
 <li class="nav-item mr-0"><a href="#" title="Sun Simulator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sun Simulator</a></li>
 </ul>
 </li>
-
-<li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Line</a></li>
+<li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Aluminum Frames" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Aluminum Frames</a></li>
@@ -206,7 +205,7 @@
 <li><a href="solar-pv.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line">Solar Panel Production Turnkey Line</a>
+<a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line">Solar Panel Production Line</a>
 <ul>
 <li><a href="#" title="Turnkey Automation">Turnkey Automation</a></li>
 <li><a href="#" title="Stringer">Stringer</a></li>
@@ -215,11 +214,11 @@
 </ul>
 </li>
 <!-- Two -->
-<li>
-<a href="#" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
+ <li>
+<a href="#" title="Solar Cell Production Line">Solar Cell Production Line</a>
 </li>
 <li>
-<a href="#" title="Solar Cell Production Line">Solar Cell Production Line</a>
+<a href="#" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
 </li>
 <li>
 <a href="raw-materials.html" title="Raw Materials">Raw Materials</a>
@@ -314,15 +313,15 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line in India"><img src="img/solar-panel-production-turnkey-line.png" class="card-img-top product-img" alt="Solar Panel Production Turnkey Line in India" title="Solar Panel Production Turnkey Line in India"></a>
+        <a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line in India"><img src="img/solar-panel-production-turnkey-line.png" class="card-img-top product-img" alt="Solar Panel Production Line in India" title="Solar Panel Production Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Solar Panel Production Turnkey Line</h5>
+            <h5 class="card-title">Solar Panel Production Line</h5>
             <p class="card-text text-muted">Advanced solar panel turnkey line for efficient manufacturing.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -331,11 +330,11 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="PV Reliability Turnkey Lab in India"><img src="img/pv-reliability-turnkey-lab.png" class="card-img-top product-img" alt="PV Reliability Turnkey Lab in India" title="PV Reliability Turnkey Lab in India"></a>
+        <a href="#" title="Solar Cell Production Line in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Cell Production Line in India" title="Solar Cell Production Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">PV Reliability Turnkey Lab</h5>
-            <p class="card-text text-muted">PV reliability turnkey lab for advanced solar testing.</p>
+            <h5 class="card-title">Solar Cell Production Line</h5>
+            <p class="card-text text-muted">High-efficiency solar cell production line setup services.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -344,15 +343,14 @@
         </div>
       </div>
     </div>
-
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Solar Cell Production Line in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Cell Production Line in India" title="Solar Cell Production Line in India"></a>
+        <a href="#" title="PV Reliability Turnkey Lab in India"><img src="img/pv-reliability-turnkey-lab.png" class="card-img-top product-img" alt="PV Reliability Turnkey Lab in India" title="PV Reliability Turnkey Lab in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Solar Cell Production Line</h5>
-            <p class="card-text text-muted">High-efficiency solar cell production line setup services.</p>
+            <h5 class="card-title">PV Reliability Turnkey Lab</h5>
+            <p class="card-text text-muted">PV reliability turnkey lab for advanced solar testing.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
