--- a/for-cylindrical-batteries.html
+++ b/for-cylindrical-batteries.html
@@ -108,10 +108,11 @@
 <ul class="dropdown-menu">
 <li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Line</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Automation" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Automation</a></li>
-<li class="nav-item mr-0"><a href="#" title="Stringer" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Stringer</a></li>
+<li class="nav-item mr-0"><a href="#" title="Semi Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Line</a></li>
+<li class="nav-item mr-0"><a href="#" title="Fully Auto Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Line</a></li>
+<li class="nav-item mr-0"><a href="#" title="Tarbor and Stringer" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Tarbor and Stringer</a></li>
 <li class="nav-item mr-0"><a href="#" title="Laminator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laminator</a></li>
-<li class="nav-item mr-0"><a href="#" title="Sun Simulator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sun Simulator</a></li>
+<li class="nav-item mr-0"><a href="#" title="Laser Cutters" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Cutters</a></li>
 </ul>
 </li>
 
@@ -119,8 +120,12 @@
 <li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Aluminum Frames" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Aluminum Frames</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solar Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cells</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Cells</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar Plant" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Plant</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar Aluminum Frame" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Aluminum Frame</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar Junction Box" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Junction Box</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar Sealant and Bonding" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Sealant and Bonding</a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar wire and plugs" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar wire and plugs</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="#" title="Solar EPC components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC components </a></li>
@@ -224,8 +229,12 @@
 <li>
 <a href="raw-materials.html" title="Raw Materials">Raw Materials</a>
 <ul>
-<li><a href="#" title="Aluminum Frames">Aluminum Frames</a></li>
 <li><a href="#" title="Solar Cells">Solar Cells</a></li>
+<li><a href="#" title="Solar Plant">Solar Plant</a></li>
+<li><a href="#" title="Solar Aluminum Frame">Solar Aluminum Frame</a></li>
+<li><a href="#" title="Solar Junction Box">Solar Junction Box</a></li>
+<li><a href="#" title="Solar Sealant and Bonding">Solar Sealant and Bonding</a></li>
+<li><a href="#" title="Solar wire and plugs">Solar wire and plugs</a></li>
 </ul>
 </li>
 <li>
